# proyectito

./: README.md  app.py  myproject.toml  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
instance/: flaskr.sqlite
templates/: base.html
templates/auth/: register.html
tests/: conftest.py  data.sql
