[project]
name = "flaskr"
version = "1.0.0"
authors = [
    { name="Julieta Murias", email="julieta.murias@gmail.com" },
]
description = "The basic blog app built in the Flask tutorial."
readme = "README.md"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"] 
build-backend = "flit_core.buildapi"